Change vote web background color for demo

--- a/vote/static/stylesheets/style.css
+++ b/vote/static/stylesheets/style.css
@@ -6,7 +6,8 @@
 html,body{
   margin: 0;
   padding: 0;
-  background-color: #F7F8F9;
+  /* background-color: #F7F8F9; */
+  background-color: #FAF3DD;
   height: 100vh;
   font-family: 'Open Sans';
 }
