--- a/vote/templates/index.html
+++ b/vote/templates/index.html
@@ -24,8 +24,9 @@
         <div id="hostname">
           Processed by container ID {{hostname}}
           </br>
-          This demo was modified by Kazuyuki Fukaya.
+          This demo was modified by Luiz Carlos Kazuyuki Fukaya.
         </div>
+        n 
       </div>
     </div>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
