--- a/vote/templates/index.html
+++ b/vote/templates/index.html
@@ -24,7 +24,7 @@
         <div id="hostname">
           Processed by container ID {{hostname}}
           </br>
-          This demo was modified by Luiz Carlos Kazuyuki Fukaya.
+          This demo was modified by (Luiz Carlos) Kazuyuki Fukaya.
         </div>
         n 
       </div>
