--- a/vote/static/stylesheets/style.css
+++ b/vote/static/stylesheets/style.css
@@ -7,7 +7,7 @@ html,body{
   margin: 0;
   padding: 0;
   /* background-color: #F7F8F9; */
-  background-color: #FAF3DF;
+  background-color: #FAF3DD;
   height: 100vh;
   font-family: 'Open Sans';
 }
