Updated vote and result web page (Production)

--- a/result/views/index.html
+++ b/result/views/index.html
@@ -41,6 +41,6 @@
     <script src="app.js"></script>
 
     </br>
-    This was updated by Kazuyuki Fukaya.
+    This was updated by Kazuyuki Fukaya. (Main branch - Production)
   </body>
 </html>
