Updated web to show it is preview version

--- a/result/views/index.html
+++ b/result/views/index.html
@@ -42,5 +42,7 @@
 
     </br>
     This was updated by Luiz Carlos Kazuyuki Fukaya.
+    </br>
+    [Branch Name: Dev, Preview - Not for production!]
   </body>
 </html>
